rendered/envs/friclu/linkding/deployment-linkding.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: linkding
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: linkding
    app.kubernetes.io/version: 1.22.1
    helm.sh/chart: linkding-2.0.0
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: linkding
      app.kubernetes.io/name: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: linkding
        app.kubernetes.io/name: linkding
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - friclu-1
      containers:
        - env:
            - name: TZ
              value: ECT
            - name: LD_SUPERUSER_NAME
              valueFrom:
                secretKeyRef:
                  key: LD_SUPERUSER_NAME
                  name: linkding-secret
            - name: LD_SUPERUSER_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: LD_SUPERUSER_PASSWORD
                  name: linkding-secret
          image: sissbruecker/linkding:1.22.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
          name: linkding
          ports:
            - containerPort: 9090
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources: {}
          volumeMounts:
            - mountPath: /etc/linkding/data
              name: linkding-storage
      serviceAccountName: default
      volumes:
        - name: linkding-storage
          persistentVolumeClaim:
            claimName: linkding
