rendered/envs/friclu/linkding/service-linkding.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: linkding
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: linkding
    app.kubernetes.io/version: 1.41.0
    helm.sh/chart: linkding-2.2.0
  name: linkding
  namespace: linkding
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: linkding
    app.kubernetes.io/name: linkding
  type: ClusterIP
